--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
+version: "3.8"
 
 services:
   app:
     build: .
     ports:
-        - "8080:8080"
+      - "8080:8080"
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/invoice_db?createDatabaseIfNotExist=true
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: 123456789
     depends_on:
       - db
+    command: sh -c "sleep 10 && java -jar app.jar"
     networks:
       - invoice-net
+
   db:
     image: mysql:8
     restart: always
@@ -24,10 +27,10 @@ services:
       - mysql-data:/var/lib/mysql
     networks:
       - invoice-net
+
 volumes:
   mysql-data:
+
 networks:
   invoice-net:
     driver: bridge
-
-
