routing by openapi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 #spring.flyway.clean-disabled=true
+springdoc.swagger-ui.config-url=openapi.yaml
+server.port=8081
