--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=invoiceAndBills system
 spring.datasource.url=jdbc:mysql://localhost:3306/invoice_db?createDatabaseIfNotExist=true
-spring.dataSource.username=root
-spring.dataSource.password=123456789
+spring.datasource.username=root
+spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 #spring.flyway.clean-disabled=true
 springdoc.swagger-ui.config-url=openapi.yaml
 server.port=8081
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=USER
